# swe-pruner

./: .gitattributes  .gitignore  README.md
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/: stats.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/docs/data/: all_models.txt
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/: __init__.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/agents/: default.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/config/: mini.yaml
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/config/extra/: swebench.yaml  swebench_base.yaml
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/models/: litellm_model.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/run/: mini.py  stats.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/run/extra/: swebench.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/src/minisweagent/utils/: pruner.py
downstream_eval/multi_turn/swebench/mini-swe-agent--with-pruning/templates/: pruner.yaml
downstream_eval/multi_turn/sweqa/: .env.example  .gitignore  README.md  llm-as-judge.py  prune_stats.py  pyproject.toml  stats.py
downstream_eval/multi_turn/sweqa/openhands-qa/: fix_empty_answer_resummary.py  fix_empty_answers.py  main.py  tool_utils.py
downstream_eval/multi_turn/sweqa/questions/: conan.jsonl  reflex.jsonl  streamlink.jsonl
downstream_eval/single_turn/: .gitignore  README.md  pyproject.toml
downstream_eval/single_turn/hard_code_pruner/downstream_task/: embedder.py  evaluate_syntax_correctness.py  model.py  reranker.py
downstream_eval/single_turn/hard_code_pruner/downstream_task/LCC/: code_compressor.py  main.py  utils.py
downstream_eval/single_turn/hard_code_pruner/downstream_task/longcodeqa/: code_compressor.py  dataset.py  eval.py  metrics.py
downstream_eval/single_turn/hard_code_pruner/utils/: cast_chunker.py  code_stmt_splitter.py  line_chunker.py  regex_chunker.py
downstream_eval/single_turn/longcodeqa/: code_compressor.py  eval.py
downstream_eval/single_turn/scripts/: lcc_4x_bytedance.sh  lcc_4x_qwen.sh  lcc_8x_bytedance.sh  lcc_8x_qwen.sh  longcodeqa_4x_bytedance.sh  longcodeqa_4x_qwen.sh  longcodeqa_8x_bytedance.sh  longcodeqa_8x_qwen.sh
examples/: .env.example  README.md  claude_code_demo.py  openhands_demo.py  pyproject.toml  tool_utils.py  tool_utils_openhands.py
inference/: README.md  calc_latency.py  online_serving.py
inference/hf/: prune_wrapper.py  swepruner.py
inference/swe-pruner/: config.json  model.safetensors
swe-pruner/: MANIFAST.in  MANIFEST.in  README.md  __init__.py  calc_latency.py  online_serving.py  pyproject.toml  test-prune.sh
swe-pruner/hf/: __init__.py
swe-pruner/mcp/: README.md
swe-pruner/model/: config.json  model.safetensors  tokenizer.json
swe-pruner/src/swe_pruner/: __init__.py  configuration.py  model_structure.py  online_serving.py  prune_wrapper.py  swepruner.py
swe-pruner/src/swe_pruner_mcp/: __init__.py  __main__.py  server.py
train/: README.md  label.sh  qgen.sh  train_llm.sh
train/core/: structure.py
train/core/prompts/: llm_label.py
train/inference/: build_label.py  qgen.py  score.py
train/scripts/: dedup.py  gh_code_dataset.py
train/train_llm/: __init__.py  train.py
utils/: README.md  score_dist_analysis.py  score_distribution_analysis.py  threshold_optimizer.py  token_vis.py
