[project]
name = "provence-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astchunk>=0.1.0",
    "colorlog>=6.10.1",
    "datasets>=4.2.0",
    "datasketch>=1.6.5",
    "dotenv>=0.9.9",
    "fastapi>=0.123.0",
    "flash-attn",
    "httpx[socks]>=0.28.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "socksio>=1.0.0",
    "streamlit>=1.50.0",
    "tempdir>=0.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "tree-sitter>=0.23.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.19.2",
    "uvicorn>=0.38.0",
    "vllm==0.11.0",
    "wandb>=0.22.2",
    "wget>=3.2",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
flash-attn = { path = "flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
