[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swe-pruner"
version = "0.1.1"
description = "Self-Adaptive Context Pruning for Coding Agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "SwePruner Team" }
]
license = { text = "MIT" }
keywords = ["code-pruning", "nlp", "transformers", "software-engineering", "code agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.123.0",
    # "flash-attn",
    "huggingface-hub>=0.36.0",
    "socksio>=1.0.0",
    # "torch>=2.8.0",
    # "torchvision>=0.23.0",
    "transformers==4.57.1",
    "typer>=0.19.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
swe-pruner = "swe_pruner.online_serving:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/swe_pruner"]

[tool.hatchling.build]
include = [
  "src/swe_pruner/**/*.py",
  "LICENSE",
  "README.md",
]
exclude = [
  "model",
  "test-prune.sh",
  "uv.lock",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
