[project]
name = "yuhang"
version = "0.1.0"
requires-python = ">=3.12, <3.13"  # ← 关键修改！
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "FlagEmbedding",
    "huggingface-hub",
    "langchain",
    "langgraph",
    "llmlingua",
    "modelscope",
    "mteb",
    "openai",
    "peft",
    "sentence-transformers",
    "torch",
    "transformers",
    "vllm",
]

[tool.uv.workspace]
members = ["LongCodeZip"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
longcodezip = { workspace = true }